[gd_scene load_steps=4 format=3 uid="uid://bi0v8rdp8e0sq"]

[ext_resource type="Script" path="res://src/farm/tile_preview.gd" id="1_c7p26"]
[ext_resource type="Theme" uid="uid://c3hfmpsb3fvhr" path="res://assets/game_theme.tres" id="1_phr11"]
[ext_resource type="PackedScene" uid="uid://2yu7drphx7ur" path="res://src/cards/card_base.tscn" id="2_xjwpf"]

[node name="TilePreview" type="Node2D"]
script = ExtResource("1_c7p26")

[node name="VBox" type="VBoxContainer" parent="."]
offset_right = 40.0
offset_bottom = 40.0

[node name="StatsPanel" type="PanelContainer" parent="VBox"]
layout_mode = 2
theme = ExtResource("1_phr11")

[node name="VBox" type="VBoxContainer" parent="VBox/StatsPanel"]
layout_mode = 2

[node name="StateLabel" type="Label" parent="VBox/StatsPanel/VBox"]
layout_mode = 2
text = "State: Destroyed"

[node name="YieldLabel" type="Label" parent="VBox/StatsPanel/VBox"]
layout_mode = 2
text = "Yield: 45"

[node name="DurationLabel" type="Label" parent="VBox/StatsPanel/VBox"]
layout_mode = 2
text = "Duration: 0 / 3"

[node name="CardBase" parent="VBox" instance=ExtResource("2_xjwpf")]
layout_mode = 2
